MOG 1.8.1 Release date: TBD
Convert to maven project
Remove unwanted packages
Refactor 

MOG 1.8.0 Release date: 10/28/2019
Fixed bug to remember colors after chart is updated
Added support for exporting SVG graphics
Multiple refactors

MOG 1.7.9 Release date: 8/21/2019
Added checks to validate metadata headers and raise error if duplicate headers are found.
Fixed reading MOG projects created without metadata.
Added permutation test for differential correlation.
Added permutation test for differential expression analysis.
Added permutation test for differential expression analysis with paired samples.
Added option to plot histogram of any column in the differential expression or differential correlation results table.
Refractor differential expression and correlation classes to save data with MOG project.
Added Holm method for p-value correction.
Added option to correct correlation p-values. 
Fixed bug in meta-analysis which computed incorrect p-values with REM.
Removed the contact developer option under help.


MOG 1.7.8b Release date: 7/14/2019
Fixed problems with executing R files on MAC
Added support to load  list of R files directly from menu


MOG 1.7.8 Release date: 7/13/2019
Added differential correlation interface
Added bar charts
Fixed "External Web Applications" function in line charts
Added option to show/hide legends in all charts
Fixed bug which caused crash when saving differential expression analysis

MOG 1.7.7 Release date: 4/6/2019 
Added option to show outliers/mean in boxplots
Save differenential expression analysis results with MOG project.
Adjust line width in line charts.
Fixed search function bug which gave wrong results with multiple queries contains "All field" and "Any field".
Added more exception handling while reading projects.

MOG 1.7.6 Release date: 3/25/2019
Fixed bug which crashed MOG when there were special characters in info columns.